--- a/applications/app-service/src/main/resources/application.properties
+++ b/applications/app-service/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.rabbitmq.addresses=amqps://${RABBITMQ_HOST}:${RABBITMQ_PASS}@jackal.rmq.c
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.enabled=true
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/v3/api-docs
+
+logging.level.org.springdoc=DEBUG
