--- a/infrastructure/security/build.gradle
+++ b/infrastructure/security/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
     implementation project(':model')
     implementation project(':exceptions')
-    implementation project(':security')
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt:0.12.6'
 }
