--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 APP_SERVICE_PORT=8080
 APP_LOGS_PORT=8081
 
-MONGO_URI=mongodb://localhost:27017
-MONGO_DATABASE=checkers
+MONGO_URI=mongodb://localhost:27017/
+MAIN_DATABASE=checkers
+EVENTS_DATABASE=events
 
-RABBITMQ_HOST=scufbaap
-RABBITMQ_PASS=qeUnIriuKO-RDXb77go2N6hkW5T_3Ctt
+RABBITMQ_HOST=ysgxzcia
+RABBITMQ_SERVER=jackal.rmq.cloudamqp.com
+RABBITMQ_PASS=eIRwDcvK_huKfxDxjWle1bBnQtUr1I30
+
+JWT_SECRET=MiClaveSuperMegaArchiSeguraYDefinitivamenteSecreta
