--- a/applications/app-logs/src/main/resources/application.properties
+++ b/applications/app-logs/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.config.import=file:.env[.properties]
 
 server.port=${APP_LOGS_PORT}
-spring.rabbitmq.addresses=amqps://${RABBITMQ_HOST}:${RABBITMQ_PASS}@jackal.rmq.cloudamqp.com/${RABBITMQ_HOST}
 
-spring.data.mongodb.checkers-uri=${MONGO_URI}/checkers
-spring.data.mongodb.events-uri=${MONGO_URI}/events
+spring.rabbitmq.addresses=amqps://${RABBITMQ_HOST}:${RABBITMQ_PASS}@${RABBITMQ_SERVER}/${RABBITMQ_HOST}
+
+spring.data.mongodb.checkers-uri=${MONGO_URI}${MAIN_DATABASE}
+spring.data.mongodb.events-uri=${MONGO_URI}${EVENTS_DATABASE}
