--- a/applications/app-service/src/main/resources/application.properties
+++ b/applications/app-service/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.port=${APP_SERVICE_PORT}
 spring.application.name=checkers
 spring.main.web-application-type=reactive
 
-spring.data.mongodb.checkers-uri=${MONGO_URI}/checkers
-spring.data.mongodb.events-uri=${MONGO_URI}/events
+spring.rabbitmq.addresses=amqps://${RABBITMQ_HOST}:${RABBITMQ_PASS}@${RABBITMQ_SERVER}/${RABBITMQ_HOST}
 
-spring.rabbitmq.addresses=amqps://${RABBITMQ_HOST}:${RABBITMQ_PASS}@jackal.rmq.cloudamqp.com/${RABBITMQ_HOST}
+spring.data.mongodb.checkers-uri=${MONGO_URI}${MAIN_DATABASE}
+spring.data.mongodb.events-uri=${MONGO_URI}${EVENTS_DATABASE}
 
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -16,3 +16,5 @@ springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 
 logging.level.org.springdoc=DEBUG
+
+jwt.secret=${JWT_SECRET}
