--- a/infrastructure/entry-points/web/build.gradle
+++ b/infrastructure/entry-points/web/build.gradle
@@ -5,7 +5,7 @@ dependencies {
 
 
     implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.7.0'
 }
