--- a/shared/src/main/resources/rabbit-config.properties
+++ b/shared/src/main/resources/rabbit-config.properties
@@ -9,3 +9,7 @@ board.created.routingKey=board.created.event
 board.updated.exchange=board.updated.exchange
 board.updated.queue=board.updated.queue
 board.updated.routingKey=board.updated.event
+
+player.created.exchange=player.created.exchange
+player.created.queue=player.created.queue
+player.created.routingKey=player.created.routingKey
