el coso sigue creciendo y todavia ni asoma el juego en si

--- a/applications/app-logs/src/main/resources/application.properties
+++ b/applications/app-logs/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.rabbitmq.addresses=amqps://${RABBITMQ_HOST}:${RABBITMQ_PASS}@${RABBITMQ_S
 
 spring.data.mongodb.checkers-uri=${MONGO_URI}${MAIN_DATABASE}
 spring.data.mongodb.events-uri=${MONGO_URI}${EVENTS_DATABASE}
+
+jwt.secret=${JWT_SECRET}
